# tp_homework

./: .gitignore  run.sh
.github/worflows/: action.yml
.github/workflows/: action.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main_test.cpp  main_test.h
task3/: CMakeLists.txt
task3/TechProgSimpleLibrary/: .CMakeLists.txt.swp  CMakeLists.txt
task3/TechProgSimpleLibrary/src/: CMakeLists.txt
task3/gcc-linaro-7.5.0-2019.12-i686_arm-linux-gnueabihf/: gcc-linaro-7.5.0-2019.12-linux-manifest.txt
task3/gcc-linaro-7.5.0-2019.12-i686_arm-linux-gnueabihf/lib/: libcc1.so.0.0.0
task3/sysroot-glibc-linaro-2.25-2019.12-armv8l-linux-gnueabihf/lib/: ld-linux-armhf.so.3  libasan.la  libatomic.la  libatomic.so.1.2.0  libcidn.so.1  libcrypt.so.1  libgfortran.la  libgfortran.so.4.0.0  libgomp.la  libgomp.so.1.0.0  libitm.la  libitm.so.1.0.0  libnss_dns.so.2  libnss_nis.so.2  libpthread.so.0  librt.so.1  libssp.la  libssp.so.0.0.0  libssp_nonshared.la  libstdc++.la  libstdc++.so.6.0.24-gdb.py  libstdc++fs.la  libsupc++.la  libthread_db.so.1  libubsan.la  libubsan.so.0  libutil.so.1
task3/sysroot-glibc-linaro-2.25-2019.12-armv8l-linux-gnueabihf/lib/debug/: libstdc++.la  (+1 more)
task3/sysroot-glibc-linaro-2.25-2019.12-armv8l-linux-gnueabihf/sbin/: sln
task4/: CMakeLists.txt
task5/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task5/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task5/tests/03-weather/: .WeatherTestCase.cpp.swp  WeatherTestCase.cpp  WeatherTestCase.h
(+70 files in other folders)
